--- a/TransformadorUniversalCoordenadas/MostrarExcepción.xaml
+++ b/TransformadorUniversalCoordenadas/MostrarExcepción.xaml
@@ -29,7 +29,7 @@
             </Grid>
         </StackPanel>
 
-        <TextBox Grid.Row="1" VerticalScrollBarVisibility="Auto" Text="{Binding Path=Mensaje}" AcceptsReturn="True" />
+        <TextBox Grid.Row="1" VerticalScrollBarVisibility="Auto" Text="{Binding Path=Mensaje}" AcceptsReturn="True" Margin="0,5,0,21" Grid.RowSpan="2" />
 
         <Button Grid.Row="2" HorizontalAlignment="Right" Padding="4" Click="Button_Click">Aceptar</Button>
     </Grid>
